[tool.poetry]
name = "snyk-code-test"
version = "0.1.0"
description = ""
authors = ["tiltowait <208040+tiltowait@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
